fixing long file names not wrapping onto multiple lines

--- a/assets/_styles/components/read-only.scss
+++ b/assets/_styles/components/read-only.scss
@@ -121,6 +121,9 @@
       max-width: 700px;
       margin-bottom: .6em;
     }
+    dd {
+      word-break: break-word;
+    }
   }
 
   dl {
